--- a/app/src/main/res/layout/news_details.xml
+++ b/app/src/main/res/layout/news_details.xml
@@ -154,14 +154,14 @@
             android:focusable="true"
             android:text="@string/save"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/floatingActionShareButton"
+            app:layout_constraintEnd_toStartOf="@+id/ShareButton"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/sourceUrlTextView"/>
 
     <android.support.v7.widget.AppCompatButton
-            android:id="@+id/floatingActionShareButton"
+            android:id="@+id/ShareButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
