Add news Image and search parameters

--- a/app/src/main/res/layout/activity_news_details.xml
+++ b/app/src/main/res/layout/activity_news_details.xml
@@ -21,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_news_details"/>
+    <include layout="@layout/content_news_details" android:layout_height="453dp"/>
 
 
 </android.support.design.widget.CoordinatorLayout>
