--- a/app/src/main/res/layout/content_news_details.xml
+++ b/app/src/main/res/layout/content_news_details.xml
@@ -116,7 +116,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/default_image" />
+            app:srcCompat="@drawable/default_image" android:layout_marginTop="64dp"/>
 
     <TextView
             android:id="@+id/headlineTextView"
