--- a/app/src/main/res/layout/activity_news_details.xml
+++ b/app/src/main/res/layout/activity_news_details.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".NewsDetails">
+        tools:context=".Views.NewsDetails">
 
     <android.support.design.widget.AppBarLayout
             android:layout_height="wrap_content"
@@ -21,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_news_details" android:layout_height="453dp"/>
+    <include layout="@layout/content_news_details"/>
 
 
 </android.support.design.widget.CoordinatorLayout>
