Save and return shared stories

--- a/app/src/main/res/layout/activity_news_details.xml
+++ b/app/src/main/res/layout/activity_news_details.xml
@@ -20,8 +20,9 @@
                 app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
     </android.support.design.widget.AppBarLayout>
-
-    <include layout="@layout/content_news_details"/>
+    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
+        <include layout="@layout/content_news_details"/>
+    </ScrollView>
 
 
 </android.support.design.widget.CoordinatorLayout>
